--- a/Classobjects in python.ipynb
+++ b/Classobjects in python.ipynb
@@ -57,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-10, 2, 8], [-7, -3, 10]]\n"
+     ]
+    }
+   ],
    "source": [
     "#EXERCICE 3\n",
     "\n",
@@ -120,6 +128,39 @@
     "\n",
     "pair_ele().myfunc1(50)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blu is a bird\n",
+      "Woo is also a bird\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parrot:\n",
+    "    # class attribute\n",
+    "    species = \"bird\"\n",
+    "\n",
+    "    # instance attribute\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "# instantiate the Parrot class\n",
+    "blu = Parrot(\"Blu\", 10)\n",
+    "woo = Parrot(\"Woo\", 15)\n",
+    "\n",
+    "# access the class attributes\n",
+    "print(\"Blu is a {}\".format(blu.__class__.species))\n",
+    "print(\"Woo is also a {}\".format(woo.__class__.species))"
    ]
   },
   {
